--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <section id="sec1" class="sec1">
         <div class="nav">
-            <img src="/assents/logo.png" alt="">
+            <img src="./assents/logo.png" alt="">
             <div id="trilho" class="trilho">
                 <div class="indicador"></div>
             </div>
